fixed overflow at index

--- a/static/style.css
+++ b/static/style.css
@@ -50,6 +50,20 @@ div.container {
   overflow: hidden;
 }
 
+div.sandbox {
+  width: 100%;
+  margin: 2px -50px 2px 0;
+  padding: 16px 0;
+  -webkit-box-flex: 2;      /* OLD - iOS 6-, Safari 3.1-6 */
+  -moz-box-flex: 2;         /* OLD - Firefox 19- */
+  -webkit-flex: 2;          /* Chrome */
+  -ms-flex: 2;              /* IE 10 */
+  flex: 2;     
+  overflow-y: scroll;
+  overflow-x: visible;
+  position: relative;
+}
+
 div.grid {
   width: 100%;
   margin: 2px -50px 2px 0;
@@ -61,6 +75,7 @@ div.grid {
   flex: 2;     
   overflow-y: scroll;
   overflow-x: hidden;
+  position: relative;
 }
 
 div.stop-gap {
